--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+appdirs==1.4.3
 certifi==2018.10.15
 Django==2.1.4
 django-columns==0.1.0
 django-crispy-forms==1.7.2
+packaging==18.0
+pyparsing==2.3.0
 pytz==2018.7
+six==1.12.0
